--- a/public/paper.html
+++ b/public/paper.html
@@ -2,8 +2,8 @@
 <a href="/paper">Play Paper</a><br>
 <a href="/scissors">Play Scissors</a>
 
-<h2>We played rock!</h2>
+<h2>We played paper!</h2>
 
 <h2>They played paper!</p>
 
-<h2>We lost!</h2>
+<h2>We tied!</h2>
