Commit with Index

--- a/public/scissors.html
+++ b/public/scissors.html
@@ -1,9 +1,11 @@
-<a href="/rock">Play Rock</a><br>
-<a href="/paper">Play Paper</a><br>
-<a href="/scissors">Play Scissors</a>
+<div><a href="/rock">Play Rock</a></div><br>
+<div><a href="/paper">Play Paper</a></div><br>
+<div><a href="/scissors">Play Scissors</div></a>
 
 <h2>We played scissors!</h2>
 
 <h2>They played paper!</p>
 
 <h2>We won!</h2>
+
+<a href="/">Rules</a><br>
