Added Home Pae & Formatted with Head & Body

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,13 @@
-<a href="/rock">Play Rock</a><br>
-<a href="/paper">Play Paper</a><br>
-<a href="/scissors">Play Scissors</a>
+<!DOCTYPE html>
 
-
+<html>
+  <head>
+    <title>Rock-Paper-Scissors Rules</title>
+    <meta charset="utf-8">
+  <body>
+    <div><a href="/rock">Play Rock</a></div>
+    <div><a href="/paper">Play Paper</a></div>
+    <div><a href="/scissors">Play Scissors</div></a>
+  </body>
+</head>
+</html>
