--- a/public/rock.html
+++ b/public/rock.html
@@ -1,11 +1,18 @@
-<a href="/rock">Play Rock</a><br>
-<a href="/paper">Play Paper</a><br>
-<a href="/scissors">Play Scissors</a>
+<!DOCTYPE html>
 
-<h2>We played rock!</h2>
+<html>
+  <head>
+    <title>You played rock!</title>
+    <meta charset="utf-8">
+  <body>
+    <div><a href="/rock">Play Rock</a></div>
+    <div><a href="/paper">Play Paper</a></div>
+    <div><a href="/scissors">Play Scissors</div></a>
 
-<h2>They played paper!</p>
-
-<h2>We lost!</h2>
-
-<a href="/">Rules</a><br>
+    <h2>We played rock!</h2>
+    <h2>They played paper!</h2>
+    <h2>We lost!</h2>
+    <a href="/">Rules</a><br>
+  </body>
+</head>
+</html>
