--- a/public/scissors.html
+++ b/public/scissors.html
@@ -1,11 +1,18 @@
-<div><a href="/rock">Play Rock</a></div><br>
-<div><a href="/paper">Play Paper</a></div><br>
-<div><a href="/scissors">Play Scissors</div></a>
+<!DOCTYPE html>
 
-<h2>We played scissors!</h2>
+<html>
+  <head>
+    <title>You played scissors!</title>
+    <meta charset="utf-8">
+  <body>
+    <div><a href="/rock">Play Rock</a></div>
+    <div><a href="/paper">Play Paper</a></div>
+    <div><a href="/scissors">Play Scissors</div></a>
 
-<h2>They played paper!</p>
-
-<h2>We won!</h2>
-
-<a href="/">Rules</a><br>
+    <h2>We played scissors!</h2>
+    <h2>They played paper!</h2>
+    <h2>We won!</h2>
+    <a href="/">Rules</a><br>
+  </body>
+</head>
+</html>
